# django-blueprint

./: README.md  manage.py  pyproject.toml
blueprint/: settings.py
