[tool.poetry]
name = "blueprint"
version = "0.1.0"
description = ""
authors = ["thuwarakeshm <thuwarakeshm@stax.com>"]

[tool.poetry.dependencies]
python = "^3.8"
toml = "^0.10.2"
python-dotenv = "^0.19.0"
Django = "^3.2.7"
psycopg2-binary = "^2.9.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.9b0"
pre-commit = "^2.15.0"
isort = "^5.9.3"
autoflake = "^1.4"
mkdocs-material = "^7.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[app]
# For django apps, you can manage config variables in settings.py. 
# But if you prefer, you can do it here as well.
# If so, be sure to uncomment the relavant lines in settings.py
APP_NAME="blueprint"